# EvoDet

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
clod_framework/data/: builder.py  replay_pair_dataset.py  replay_yolo_dataset.py  task.py  uda_builder.py  yolo_detection_dataset.py
clod_framework/engine/: evaluator.py  optim.py
clod_framework/evaluation/: detection_metrics.py  domain_metrics.py  forgetting_metrics.py  transfer_metrics.py
clod_framework/losses/: detection_loss.py  yolo_lwf_replay_loss.py
clod_framework/methods/: base_method.py  confmix_yolov8.py  finetune.py  yolo_lwf_ocdm.py
clod_framework/models/: __init__.py  base_detector.py  builder.py  yolov8_detector.py
clod_framework/replay/: ocdm_memory.py  replay_buffer.py
clod_framework/utils/: seed.py  yaml_utils.py  yolo_labels.py
configs/datasets/: cityscapes.yaml  coco.yaml  foggy_cityscapes_beta02.yaml  miltech_dark.yaml  miltech_natural.yaml
configs/experiments/: cityscapes_to_foggy_confmix.yaml  coco_40p10_finetune.yaml  coco_40p10_yolo_lwf_ocdm.yaml  miltech_2p2_finetune.yaml  miltech_2p2_yolo_lwf_ocdm.yaml  miltech_natural_to_dark_confmix.yaml
configs/models/: yolov8n.yaml
scripts/: train_incremental.py  train_uda.py
tools/: check_yolo_labels.py  counts_miltech_tasks.py  filter_foggy_beta.py  print_task_split.py
